# Alae

./: .gitignore  Alae.cabal  README.md
agda/: Equality.agda  Test.agda
src/: Alae.hs  Main.hs
