name:                Alae
version:             0.1.0.0
homepage:            https://github.com/halfaya/Alae
license:             MIT
license-file:        LICENSE
author:              John Leo
maintainer:          leo@halfaya.org
copyright:           2018 John Leo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Alae
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Alae
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, Alae
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/halfaya/Alae
